# autoship_trans_sim

./: .gitignore  Agent.py  LICENSE  LICENSE.txt  README.md  TechAsset.py  World.py  adopt.py  calculate.py  cost_1.yaml  gui.py  helloworld.py  input.py  invest.py  main.ipynb  main.py  main_multiagent.py  multiple_run.py  output.py  pyproject.toml  requirements.txt  result.py  scatter_plot.ipynb  test.ipynb  tn_test.ipynb  web.py
csv/: costtest_0331.csv  demandtest_0331.csv  demandtest_0503.csv  fleettest_0331.csv  fleettest_0503.csv  fleettest_0504.csv  fleettest_0507.csv  selecttest_0331.csv  spectest_0331.csv  spectest_0503.csv  spectest_0504.csv  spectest_0507.csv  techtest_0331.csv  techtest_0503.csv  techtest_0504.csv  techtest_0507.csv
csv/_old/: config.csv
mysite/: settings.py
old/: World.py  invest.py  main.ipynb  owner.py  ship.py  tech.py  web.py
old/cost/: cost_1.yml
old/csv_old/: cost.csv  costtest_0331.csv  demand.csv  num_crew.csv  spec.csv  spectest_0331.csv
old/ref/: utility.py
old/scenario/: scenario_.yml  scenario_test_0331.yml
old/spec/: spec_1.yml
ref/: policymaker.py  scenario.py  shipowner.py
result/test_0503/: fleet_test_0503.csv  spec_test_0503.csv  subsidy_test_0503.csv  tech_test_0503.csv
yml/: cost.yml  cost_1500.yml  cost_199.yml  cost_3000.yml  cost_499.yml  cost_499_old.yml  cost_4_Apex.yml  cost_749.yml  cost_80000.yml  cost_99.yml  fleet_Apex.yml  fleet_domestic.yml  fleet_international.yml  scenario.yml  scenario_1.yml  ship_spec.yml  spec_1.yml  tech.yml
yml/cost/: cost_test_0331.yml  cost_tmp.yml
yml/scenario/: scenario_2.yml  scenario_e.g. test_0331.yml
yml/spec/: spec_1.yml  spec_test_0331.yml
