[tool.poetry]
name = "autoship-trans-sim"
version = "0.1.0"
description = ""
authors = ["tnakash <antarctica219@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"
altair = "^5.3.0"
streamlit = "^1.35.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
